# cpp-ml-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp-ci.yml
cmake/: mlConfig.cmake.in
cpp-ml-library/: CMakeLists.txt
cpp-ml-library/cpp-ml-library/: main.cpp
cpp-ml-library/cpp-ml-library/include/: kmeans.h  linear_regression.h  matrix.cpp  matrix.h  vector_utils.h
cpp-ml-library/cpp-ml-library/src/: kmeans.cpp  linear_regression.cpp  logistic_regression.cpp
cpp-ml-library/include/: kmeans.h  linear_regression.h
cpp-ml-library/mlTests/tests/: test_kmeans.cpp  test_logistic_regression.cpp  test_matrix.cpp
cpp-ml-library/src/: kmeans.cpp  logistic_regression.cpp
cpp-ml-library/tests/: CMakeLists.txt  test_linear_regression.cpp
include/: logistic_regression.h  matrix.h  svm.h  vector_utils.h
src/: kmeans.cpp  linear_regression.cpp  logistic_regression.cpp  matrix.cpp  svm.cpp
tests/: test_main.cpp  test_matrix.cpp
